--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -35,3 +35,13 @@ on property:sys.usb.ffs.ready=1
     write /config/usb_gadget/g1/strings/0x409/product "OnePlus"
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f1
     write /config/usb_gadget/g1/UDC ${sys.usb.controller}
+
+on post-fs-data
+    start ubports-mounter
+    wait_for_prop halium.datamount.done 1
+
+service ubports-mounter /sbin/sh /ubports-mounter.sh
+    disabled
+    oneshot
+
+
