--- a/ubuntu/system/mount-android.conf
+++ b/ubuntu/system/mount-android.conf
@@ -17,8 +17,8 @@ script
 
     # Store updates on userdata partition since cache is too small
     umount /android/cache || true
-    mkdir -p /userdata/cache
-    mount -o bind /userdata/cache /android/cache
+    mkdir -p /userdata/android-data/cache
+    mount -o bind /userdata/android-data/cache /android/cache
     mkdir -p /android/cache/recovery
 
     if [ -d /android/metadata ]; then
