--- a/ubuntu/network/ril_subscription.conf
+++ b/ubuntu/network/ril_subscription.conf
@@ -11,8 +11,11 @@ emptyPinQuery=false
 radioPowerCycle=false
 confirmRadioPowerOn=false
 
-
 [ril_0]
+transport=binder:name=slot1
+name=slot1
+
+[ril_1]
 transport=binder:name=slot2
 name=slot2
 
