--- a/ubuntu/network/ril_subscription.conf
+++ b/ubuntu/network/ril_subscription.conf
@@ -10,12 +10,9 @@ SetRadioCapability=off
 emptyPinQuery=false
 radioPowerCycle=false
 confirmRadioPowerOn=false
-
-[ril_0]
-transport=binder:name=slot1
-name=slot1
+useDataProfiles=true
 
 [ril_1]
-transport=binder:name=slot2
-name=slot2
+transport=binder:name=slot1
+name=slot1
 
